# typedlua-parser

./: .gitignore  Cargo.toml  README.md  criterion.toml
benches/: full.rs  incremental_bench.rs  lexer.rs  lib.rs  parser.rs
crates/luanext-parser/src/incremental/: tokens.rs
docs/: architecture.md  ast.md  incremental-parsing.md  lexer.md  parser.md
examples/: profile.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_lexer.rs  fuzz_parser.rs  fuzz_typechecker.rs
src/: di.rs  diagnostics.rs  errors.rs  lib.rs  span.rs  string_interner.rs
src/ast/: expression.rs  mod.rs  pattern.rs  statement.rs  types.rs
src/incremental/: adjustment.rs  cache.rs  dirty.rs  mod.rs  offset.rs  state.rs  tokens.rs
src/lexer/: lexeme.rs  mod.rs
src/parser/: arena_test.rs  expression.rs  mod.rs  pattern.rs  statement.rs  types.rs
test_data/: sample.tl
tests/: incremental_edit_scenarios.rs  incremental_lexing_tests.rs  incremental_parsing_tests.rs  template_pattern_tests.rs
