[workspace]

[package]
name = "luanext-parser"
version = "0.1.0"
edition = "2021"
description = "Lexer, parser, and AST for LuaNext - a typed superset of Lua"
documentation = "https://github.com/forge18/luanext-parser"
repository = "https://github.com/forge18/luanext-parser"
license = "MIT"
keywords = ["lua", "luanext", "parser", "compiler", "lexer"]
categories = ["development-tools", "parsing"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rustc-hash = "2.1"
thiserror = "2.0"
lasso = { version = "0.7", features = ["multi-threaded", "serialize"] }
bumpalo = "3.16"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["typed"]
typed = []  # Enable TypedLua extensions (classes, interfaces, etc.)

[[bench]]
name = "lexer"
harness = false

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "full"
harness = false

[[bench]]
name = "incremental_bench"
harness = false