[package]
name = "typedlua-fuzz"
version = "0.1.0"
edition = "2021"
authors = ["TypedLua Contributors"]
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
typedlua-parser = { path = ".." }

[[bin]]
name = "fuzz_lexer"
path = "fuzz_targets/fuzz_lexer.rs"
test = false
doc = false

[[bin]]
name = "fuzz_parser"
path = "fuzz_targets/fuzz_parser.rs"
test = false
doc = false

[[bin]]
name = "fuzz_typechecker"
path = "fuzz_targets/fuzz_typechecker.rs"
test = false
doc = false
